<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUpActivity">

  <ImageView
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:src="@drawable/loginlogo"
    android:id="@+id/signUplogo"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/signUplogo"
      android:orientation="vertical"
      android:layout_margin="30dp"
      >

    <EditText
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:id="@+id/signUp_username"
          android:maxLines="1"
          android:inputType="text"
          android:hint="@string/UsernameHint"
          android:padding="10dp"
          android:layout_marginTop="10dp"
          android:background="@drawable/edittext_bg"/>

    <EditText
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:id="@+id/signUp_Email"
          android:maxLines="1"
          android:hint="@string/Email"
          android:inputType="textEmailAddress"
          android:focusable="true"
          android:padding="10dp"
          android:layout_marginTop="10dp"
          android:background="@drawable/edittext_bg"
          android:focusableInTouchMode="true"/>

    <EditText
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:id="@+id/signUp_passwd"
          android:maxLines="1"
          android:inputType="textPassword"
          android:hint="@string/Passwd"
          android:focusable="true"
          android:focusableInTouchMode="true"
          android:padding="10dp"
          android:layout_marginTop="10dp"
          android:background="@drawable/edittext_bg"
        />

    <EditText
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:id="@+id/signUp_passwd2"
          android:maxLines="1"
          android:inputType="textPassword"
          android:hint="Confirm Password"
          android:focusable="true"
          android:focusableInTouchMode="true"
          android:padding="10dp"
          android:layout_marginTop="10dp"
          android:background="@drawable/edittext_bg"/>


    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/SignUpButton"
        android:textColor="@color/white"
        android:background="@drawable/custombtn"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/forgetPasswd"
          android:id="@+id/forgetpasswd"
          android:layout_below="@+id/signupButton"
          android:clickable="true"
          android:onClick="onClick"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/AlreadyhvACC"
          android:layout_marginLeft="120dp"
          android:id="@+id/HaveAccount"
          android:layout_below="@+id/loginButton"
          android:layout_gravity="right"
          android:clickable="true"
          android:onClick="onClick"
          />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center"
        style="?android:attr/progressBarStyle"
        />

  </LinearLayout>


</RelativeLayout>