<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity">

    <ImageView
        android:id="@+id/loginlogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/loginlogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginlogo"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Email"
                android:padding="10dp"
                android:background="@drawable/edittext_bg"
                android:maxLines="1" />


            <EditText
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/Passwd"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_bg"
                android:inputType="textPassword"
                android:maxLines="1" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/LoginButton"
            android:background="@drawable/custombtn"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white" />


        <LinearLayout
            android:id="@+id/util"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgetpasswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginButton"
                android:clickable="true"
                android:text="@string/forgetPasswd" />

            <TextView
                android:id="@+id/dontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginButton"
                android:layout_gravity="right"
                android:layout_marginStart="125dp"
                android:clickable="true"
                android:text="@string/donthaveACC" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="invisible" />

    </LinearLayout>

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="660dp"
        android:alpha="0.4"
        android:background="@android:color/transparent"
        android:text="Skip this >>"
        android:textColor="@color/black" />



</RelativeLayout>